fix: release v1.0.0 index.html for lab9

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1 id="welcome" style="color: #631889;">Welcome to My Website!!! v1.3 test lab8 auto</h1>
+    <h1 id="welcome" style="color: #631889;">Welcome to My Website!!! v1.0.0 Release by manual - Lab9</h1>
     <p>Thank you for visiting. Enjoy your stay!</p>
 
     <form action="/api/login" method="POST">
